--- a/lib/views/general/_before_body_end.html.erb
+++ b/lib/views/general/_before_body_end.html.erb
@@ -11,26 +11,25 @@
 	<% if is_admin? %>
     <ul id="menu" class="mfb-component--br mfb-zoomin" data-mfb-toggle="hover">
       <li class="mfb-component__wrap">
-        <a href="#" class="mfb-component__button--main">
+        <a href="#" class="mfb-component__button--main mfb-link">
           <i class="mfb-component__main-icon--resting ion-plus-round"></i>
           <i class="mfb-component__main-icon--active ion-close-round"></i>
         </a>
         <ul class="mfb-component__list">
           <li>
-            <a href="https://github.com/nobitagit/material-floating-button/" data-mfb-label="View on Github" class="mfb-component__button--child">
+            <a href="https://github.com/codeforcroatia/reklamacije.net/issues/new" data-mfb-label="Novi problem na Github" class="mfb-component__button--child mfb-link">
               <i class="mfb-component__child-icon ion-social-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://github.com/nobitagit" data-mfb-label="Follow me on Github" class="mfb-component__button--child">
-              <i class="mfb-component__child-icon ion-social-octocat"></i>
+            <a href="http://timesheet.codeforcroatia.org/" data-mfb-label="Upiši volonterske sate" class="mfb-component__button--child mfb-link">
+              <i class="mfb-component__child-icon ion-ios-timer"></i>
             </a>
           </li>
 
           <li>
-            <a href="http://twitter.com/share?text=Check this material floating button component!&url=http://nobitagit.github.io/material-floating-button/&hashtags=material,design,button,css"
-               data-mfb-label="Share on Twitter" class="mfb-component__button--child">
-              <i class="mfb-component__child-icon ion-social-twitter"></i>
+            <a href="http://admin.reklamacije.net/" data-mfb-label="Priručnik za administratore" class="mfb-component__button--child mfb-link">
+              <i class="mfb-component__child-icon ion-ionic"></i>
             </a>
           </li>
         </ul>
