--- a/lib/views/general/_before_body_end.html.erb
+++ b/lib/views/general/_before_body_end.html.erb
@@ -17,18 +17,18 @@
         </a>
         <ul class="mfb-component__list">
           <li>
-            <a href="https://github.com/codeforcroatia/reklamacije.net/issues/new" data-mfb-label="Novi problem na Github" class="mfb-component__button--child mfb-link">
+            <a href="https://github.com/codeforcroatia/reklamacije.net/issues/new" data-mfb-label="Novi problem na Githubu" class="mfb-component__button--child mfb-link" target="_blank">
               <i class="mfb-component__child-icon ion-social-github"></i>
             </a>
           </li>
           <li>
-            <a href="http://timesheet.codeforcroatia.org/" data-mfb-label="Upiši volonterske sate" class="mfb-component__button--child mfb-link">
+            <a href="http://timesheet.codeforcroatia.org/" data-mfb-label="Upiši volonterske sate" class="mfb-component__button--child mfb-link" target="_blank">
               <i class="mfb-component__child-icon ion-ios-timer"></i>
             </a>
           </li>
 
           <li>
-            <a href="http://admin.reklamacije.net/" data-mfb-label="Priručnik za administratore" class="mfb-component__button--child mfb-link">
+            <a href="http://admin.reklamacije.net/" data-mfb-label="Priručnik za administratore" class="mfb-component__button--child mfb-link" target="_blank">
               <i class="mfb-component__child-icon ion-ionic"></i>
             </a>
           </li>
@@ -36,5 +36,9 @@
       </li>
     </ul>
     <% else %>
+<script>
+window._elev = window._elev || {};(function() {var i,e;i=document.createElement("script"),i.type='text/javascript';i.async=1,i.src="https://static.elev.io/js/v3.js",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(i,e);})();
+_elev.account_id = '5437ef258b5de';
+</script>
     <% end %>
 <!-- Floating buttons END -->
