remove elevio, add floating buttons

--- a/lib/views/general/_before_body_end.html.erb
+++ b/lib/views/general/_before_body_end.html.erb
@@ -36,9 +36,31 @@
       </li>
     </ul>
     <% else %>
-<script>
-window._elev = window._elev || {};(function() {var i,e;i=document.createElement("script"),i.type='text/javascript';i.async=1,i.src="https://static.elev.io/js/v3.js",e=document.getElementsByTagName("script")[0],e.parentNode.insertBefore(i,e);})();
-_elev.account_id = '5437ef258b5de';
-</script>
+    <ul id="menu" class="mfb-component--br mfb-zoomin" data-mfb-toggle="hover">
+      <li class="mfb-component__wrap">
+        <a href="#" class="mfb-component__button--main mfb-link">
+          <i class="mfb-component__main-icon--resting ion-help"></i>
+          <i class="mfb-component__main-icon--active ion-help-circled"></i>
+        </a>
+        <ul class="mfb-component__list">
+          <li>
+            <a href="http://reklamacije.net/help/about#premise" data-mfb-label="Kako poslati reklamaciju?" class="mfb-component__button--child mfb-link" target="_blank">
+              <i class="mfb-component__child-icon ion-compose"></i>
+            </a>
+          </li>
+          <li>
+            <a href="http://reklamacije.net/help/about#prava-potrosaca" data-mfb-label="Koja su moja prava?" class="mfb-component__button--child mfb-link" target="_blank">
+              <i class="mfb-component__child-icon ion-document-text"></i>
+            </a>
+          </li>
+
+          <li>
+            <a href="http://reklamacije.net/help/requesting#focused" data-mfb-label="Što treba navesti u prigovoru?" class="mfb-component__button--child mfb-link" target="_blank">
+              <i class="mfb-component__child-icon ion-ios-list-outline"></i>
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
     <% end %>
 <!-- Floating buttons END -->
