admin color orange

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -1621,6 +1621,10 @@ a.mfb-link {
     color: white;
 }
 
+.mfb-admin {
+  background-color: #eb8916;
+}
+
 /*------------------------------------*\
     #DEVELOPMENT | Debuggers
 \*------------------------------------*/
