--- a/lib/views/general/_before_body_end.html.erb
+++ b/lib/views/general/_before_body_end.html.erb
@@ -11,24 +11,24 @@
 	<% if is_admin? %>
     <ul id="menu" class="mfb-component--br mfb-zoomin" data-mfb-toggle="hover">
       <li class="mfb-component__wrap">
-        <a href="#" class="mfb-component__button--main mfb-link">
+        <a href="#" class="mfb-component__button--main mfb-link mfb-admin">
           <i class="mfb-component__main-icon--resting ion-plus-round"></i>
           <i class="mfb-component__main-icon--active ion-close-round"></i>
         </a>
         <ul class="mfb-component__list">
           <li>
-            <a href="https://github.com/codeforcroatia/reklamacije.net/issues/new" data-mfb-label="Novi problem na Githubu" class="mfb-component__button--child mfb-link" target="_blank">
+            <a href="https://github.com/codeforcroatia/reklamacije.net/issues/new" data-mfb-label="Novi problem na Githubu" class="mfb-component__button--child mfb-link mfb-admin" target="_blank">
               <i class="mfb-component__child-icon ion-social-github"></i>
             </a>
           </li>
           <li>
-            <a href="http://timesheet.codeforcroatia.org/" data-mfb-label="Upiši volonterske sate" class="mfb-component__button--child mfb-link" target="_blank">
+            <a href="http://timesheet.codeforcroatia.org/" data-mfb-label="Upiši volonterske sate" class="mfb-component__button--child mfb-link mfb-admin" target="_blank">
               <i class="mfb-component__child-icon ion-ios-timer"></i>
             </a>
           </li>
 
           <li>
-            <a href="http://admin.reklamacije.net/" data-mfb-label="Priručnik za administratore" class="mfb-component__button--child mfb-link" target="_blank">
+            <a href="http://admin.reklamacije.net/" data-mfb-label="Priručnik za administratore" class="mfb-component__button--child mfb-link mfb-admin" target="_blank">
               <i class="mfb-component__child-icon ion-ionic"></i>
             </a>
           </li>
