--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -1639,6 +1639,6 @@ a.mfb-link {
 /*# sourceMappingURL=mfb.css.map */
 
 
-.navigation_search_button {
+input.navigation_search_button {
     height: 1.875em;
 }
