fix responsive table (3)

--- a/lib/views/request/details.html.erb
+++ b/lib/views/request/details.html.erb
@@ -37,20 +37,20 @@
     </tr>
   </thead>
 
-  <% @info_request.info_request_events.each do |info_request_event| %>
   <tbody>
+  <% @info_request.info_request_events.each do |info_request_event| %>
     <tr>
     <% for column in @columns %>
       <td data-label="<%= column %>">
-        <%=h info_request_event.send(column) %>
+        &nbsp;<%=h info_request_event.send(column) %>
       </td>
     <% end %>
     <td data-label="link">
     <% if info_request_event.outgoing_message %>
-      <%= link_to "outgoing", outgoing_message_path(info_request_event.outgoing_message) %>
+      &nbsp;<%= link_to "outgoing", outgoing_message_path(info_request_event.outgoing_message) %>
     <% end %>
     <% if info_request_event.incoming_message %>
-      <%= link_to "incoming", incoming_message_path(info_request_event.incoming_message) %>
+      &nbsp;<%= link_to "incoming", incoming_message_path(info_request_event.incoming_message) %>
     <% end %>
     </td>
     </tr>
