--- a/lib/views/help/_why_they_should_reply_by_email.html.erb
+++ b/lib/views/help/_why_they_should_reply_by_email.html.erb
@@ -1,3 +1,3 @@
-The laws says that an email is sufficient (<a href="<%= help_page_url(:anchor => 'full_address') %>">more details</a>).
+U najboljem slučaju trebali bi odgovoriti elektornskim putem tako da odgovor bude transparentan i javno objavljen na ovom portalu. 
 
-At the bottom of this page, write a reply to the authority explaining this to them.
+Dolje im napišite obrazloženje zašto preferirate odgovor zaprimiti putem emaila.
