update complaint policy
adding detailed rules to complaint policy

--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -58,10 +58,25 @@
 </p>
 </dd>
 
+<dt id="inappropriate"><a name="inappropriate"></a>Uklanjanje neprikladnog sadržaja <a href="#inappropriate">#</a> </dt>
+
+<dd><p>Neprikladan sadržaj koji nije u skladu s pravilima korištenja ove stranice može biti uklonjen s <i><%= site_name %></i>. Pogledajte niže kako možete označiti neprikaladan sadržaj koji je potrebno ukloniti.</p>
+<strong>Prije nego počnete</strong>
+<ul>
+<li><b>Provjerite pravila korištenja.</b> Označite neprikladnim samo one sadržaje koji nisu u skladu s pravilima korištenja. Nemojte označavati prigovore ili komentare samo zato jer se vi s njima ne slažete ili vam se ne sviđaju. Naši volonteri ne vole se uključivati kada se trgovac i kupac ne slažu oko činjenica, s obzirom da ne postoji pouzdan način da se utvrdi tko je u pravu a tko je u krivu, posebice kada je riječ o doživljenom iskustvu korisnika. Pročitajte <a href="<%= help_requesting_path %>">pravila korištenja</a> prije označavanja sadržaj kao neprikladan.</li>
+<li><b>Budite strpljivi.</b> Može proći nekoliko dana da se vaša prijava pregleda.</li> 
+</ul>
+<p>Ako vjerujete da je prigovor, komentar ili drugi sadržaj na stranici protivan pravilima korištenja, možete ga označiti neprikladnim i za uklanjanje:</br>
+Svaki predmet na ovom portalu s desne strane ima tipku za prijavljivanje sadržaja neprikladnim. Kliknite na tipku te detaljno opišite razloge za uklanjanje.
+</p>
+<p>Koristimo automatske mjere da spriječimo neželjene poruke (spam). Iako su ponekada valjani prigovori nehotice uklonjeni, ove mjere protiv spama pomažu poboljšati iskustvo korisnika na portalu <i><%= site_name %></i> osiguravajući da su prigovori autentični i relevantni.
+</p>
+</dd>
+
 <dt id="allowed_responses">Moj odgovor na staru reklamaciju putem <i><%= site_name %></i> je vraćen s greškom!<a href="#allowed_responses">#</a> </dt>
 
-      <dd>Nakon šest mjeseci neaktivnosti, <i><%= site_name %></i> ograničuje tko može poslati odgovor kako bi zaustavili neželjeno spamanje starih prigovora. U tom trenutku samo trgovac može dostaviti odgovor putem službene email adrese za prigovore. Nakon dvanaest mjeseci, prigovor se zatvara i ne zaprima odgovore od nikoga. Ako trebate odgovoriti na staru reklamaciju koju treba ponovno omogućiti za odgovore, <a href="<%= help_contact_path %>">kontaktirajte nas</a>.
-      </dd>
+<dd>Nakon šest mjeseci neaktivnosti, <i><%= site_name %></i> ograničuje tko može poslati odgovor kako bi zaustavili neželjeno spamanje starih prigovora. U tom trenutku samo trgovac može dostaviti odgovor putem službene email adrese za prigovore. Nakon dvanaest mjeseci, prigovor se zatvara i ne zaprima odgovore od nikoga. Ako trebate odgovoriti na staru reklamaciju koju treba ponovno omogućiti za odgovore, <a href="<%= help_contact_path %>">kontaktirajte nas</a>.
+</dd>
 </dl>
 
 <p><strong>Ukoliko još niste</strong>, pročitate <a href="/help/about">uvod o ovom projektu</a> --&gt;
