--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -67,7 +67,7 @@
 <li><b>Budite strpljivi.</b> Može proći nekoliko dana da se vaša prijava pregleda.</li> 
 </ul>
 <p>Ako vjerujete da je prigovor, komentar ili drugi sadržaj na stranici protivan pravilima korištenja, možete ga označiti neprikladnim i za uklanjanje:</br>
-Svaki predmet na ovom portalu s desne strane ima tipku za prijavljivanje sadržaja neprikladnim. Kliknite na tipku te detaljno opišite razloge za uklanjanje.
+Svaki predmet na ovom portalu možete prijaviti putem Actions tipke te opcije <i>Prijavite ovaj prigovor</i>. Kliknite na tu opciju te detaljno i argumentirano opišite razloge za uklanjanje.
 </p>
 <p>Koristimo automatske mjere da spriječimo neželjene poruke (spam). Iako su ponekada valjani prigovori nehotice uklonjeni, ove mjere protiv spama pomažu poboljšati iskustvo korisnika na portalu <i><%= site_name %></i> osiguravajući da su prigovori autentični i relevantni.
 </p>
