--- a/lib/views/help/officers.html.erb
+++ b/lib/views/help/officers.html.erb
@@ -53,7 +53,7 @@
 
 <dt id="copyright"><a name="commercial"></a>Autorska prava na objavljenje prigovore i odgovore na njih <a href="#copyright">#</a> </dt>
 
-<dd><p>Autori prigovora na <i><%= site_name %></i> su korisnici portala. Korisnici portala registracijom i objavljivanjem prigovora prihvaćaju da su svi sadržaji na <%= site_name %> pod CC licencom. Preciznije pod licencom <a href="https://creativecommons.org/licenses/by/4.0/">Creative commons attribution alone</a>. Sadržaji objavljeni na portalu <i><%= site_name %></i> dozvoljavaju drugima dijeljenje, mijenjanje, prilagođavanje i nadogradnju orginalnog djela pod uvjetom da navedu autora, naslov djela, izvornu adresu i licencu (u obliku linka). Drugim riječima, druge fizičke i pravne osobe mogu koristiti tekstove ukoliko korektno navedu izvor i autora. Tekstovi se mogu preuzimati i u komercijalne svrhe.</p>
+<dd><p>Autori prigovora na <i><%= site_name %></i> su korisnici portala. Korisnici portala registracijom i objavljivanjem prigovora prihvaćaju da su svi sadržaji na <i><%= site_name %></i> pod CC licencom. Preciznije pod licencom <a href="https://creativecommons.org/licenses/by/4.0/">Creative commons attribution alone</a>. Sadržaji objavljeni na portalu <i><%= site_name %></i> dozvoljavaju drugima dijeljenje, mijenjanje, prilagođavanje i nadogradnju orginalnog djela pod uvjetom da navedu autora, naslov djela, izvornu adresu i licencu (u obliku linka). Drugim riječima, druge fizičke i pravne osobe mogu koristiti tekstove ukoliko korektno navedu izvor i autora. Tekstovi se mogu preuzimati i u komercijalne svrhe.</p>
 <p>Ukoliko ste vi vlasnik nekih podataka nehotice objavljenih na ovom portalu, <a href="/help/contact">kontaktirajte nas</a> za uklanjanje tog sadržaja.
 </p>
 </dd>
@@ -66,8 +66,8 @@
 <li><b>Provjerite pravila korištenja.</b> Označite neprikladnim samo one sadržaje koji nisu u skladu s pravilima korištenja. Nemojte označavati prigovore ili komentare samo zato jer se vi s njima ne slažete ili vam se ne sviđaju. Naši volonteri ne vole se uključivati kada se trgovac i kupac ne slažu oko činjenica, s obzirom da ne postoji pouzdan način da se utvrdi tko je u pravu a tko je u krivu, posebice kada je riječ o doživljenom iskustvu korisnika. Pročitajte <a href="<%= help_requesting_path %>">pravila korištenja</a> prije označavanja sadržaj kao neprikladan.</li>
 <li><b>Budite strpljivi.</b> Može proći nekoliko dana da se vaša prijava pregleda.</li> 
 </ul>
-<p>Ako vjerujete da je prigovor, komentar ili drugi sadržaj na stranici protivan pravilima korištenja, možete ga označiti neprikladnim i za uklanjanje:</br>
-Svaki predmet na ovom portalu možete prijaviti putem Actions tipke te opcije <i>Prijavite ovaj prigovor</i>. Kliknite na tu opciju te detaljno i argumentirano opišite razloge za uklanjanje.
+<p>Ako vjerujete da je prigovor, komentar ili drugi sadržaj na stranici protivan pravilima korištenja, možete ga označiti neprikladnim i za uklanjanje:</p>
+<p>Svaki predmet na ovom portalu možete prijaviti putem Actions tipke te opcije <i>Prijavite ovaj prigovor</i>. Kliknite na tu opciju te detaljno i argumentirano opišite razloge za uklanjanje.
 </p>
 <p>Koristimo automatske mjere da spriječimo neželjene poruke (spam). Iako su ponekada valjani prigovori nehotice uklonjeni, ove mjere protiv spama pomažu poboljšati iskustvo korisnika na portalu <i><%= site_name %></i> osiguravajući da su prigovori autentični i relevantni.
 </p>
