--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -44,9 +44,7 @@ U tom slučaju treba poduzeti sljedeće:
 
 <ol>
 <% if !@info_request.nil? %>
-    <li><%= link_to "Pošaljite drugostupanjsku žalbu", 
-    show_response_no_followup_url(:id => @info_request.id, :
-    incoming_message_id => nil) + "?internal_review=1#followup" %> putem <i><%= site_name %></i>.</li>
+    <li><%= link_to "Pošaljite drugostupanjsku žalbu", new_request_followup_path(:request_id => @info_request.id) + "?internal_review=1#followup", :class => 'link_button_green request-internal-review-action' %> putem <i><%= site_name %></i>.</li>
 <% else %>
     <li>Ispod prigovora na stranici <i><%= site_name %></i>, pronađite i kliknite na poveznicu <strong>napišite drugostupanjsku žalbu</strong>.</li>
 <% end %>
